gap fix

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -15,6 +15,7 @@
     margin: 2%;
     align-items: baseline;
     padding: 35px;
+    gap: 40px;
 }
 
 .charlotteText {
